# thesis

./: .gitignore  Makefile.am  Makefile.dist  abstract.tex  algorithm2e.sty  analytic.fig  array1.rb  array2.rb  array3.rb  array3pre.rb  autofocus.fig  blur.rb  breakdown.c  breakdown.rb  build-cross.sh  calibration2.txt  canny0.fig  canny1.fig  canny2.fig  canny3.fig  cbreakdown.cc  configure.ac  dataflow.dia  decoder.fig  defocus1.pgm  defocus2.pgm  depthfromdefocus.pgm  dfloat.dot  diagonal.fig  encoder.fig  examples.rb  expression.rb  fbank.fig  gabor.gnuplot  gaborF.gnuplot  globe.tgz  grid.erb  grid.ini  grid.rb  gridcalib.avi  (+51 more)
